--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,22 +1,58 @@
-version: '3.3'
+version: '3.8'
 services:
 
-  frontend:
-    container_name: foodgram_front
+  food_db:
+    container_name: food_db
+    image: postgres:13.0-alpine
+    volumes:
+      - db_volume:/var/lib/postgresql/data/
+    env_file:
+      ./.env
+
+  food_backend:
+    container_name: food_backend
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+    restart: always
+    volumes:
+      - static_data:/app/static/
+      - media_data:/app/media/
+    depends_on:
+      - food_db
+    env_file:
+      ./.env
+
+  food_frontend:
+    container_name: food_frontend
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
-  nginx:
+
+  food_nginx:
     container_name: foodgram_nginx
     image: nginx:1.19.3
-    # network_mode: host
-    extra_hosts:
-     - "host.docker.internal:host-gateway"
     ports:
      - "80:80"
+    # extra_hosts:
+    #  - "host.docker.internal:host-gateway"
+    # network_mode: host
     volumes:
+      - static_data:/app/static/
+      - media_data:/app/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+    depends_on:
+      - food_frontend
+      - food_backend
+
+volumes:
+  static_data:
+    name: static_data
+  media_data:
+    name: media_data
+  db_volume:
+    name: db_volume
