--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,11 +1,13 @@
 server {
     listen 80;
+    server_name ${NGINX_HOST};
+    
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    location api/ {
-        proxy_pass http://host.docker.internal:5000;
+    location /api/ {
+        proxy_pass http://food_frontend:5000;
     }
     location / {
         root /usr/share/nginx/html;
