--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,4 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -14,14 +13,19 @@ django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+flake8==5.0.4
 idna==3.3
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mccabe==0.7.0
 oauthlib==3.2.0
 Pillow==9.2.0
+pycodestyle==2.9.1
 pycparser==2.21
+pyflakes==2.5.0
 PyJWT==2.4.0
+python-dotenv==0.21.0
 python-gettext==4.1
 python-slugify==6.1.2
 python3-openid==3.2.0
