--- a/setup.cfg
+++ b/setup.cfg
@@ -4,5 +4,6 @@ exclude =
     venv/,
     env/
 per-file-ignores =
-    */settings.py:E501
+    *foodgram/settings.py:E501
+    *api/filters.py:R504
 max-complexity = 10
