--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -102,7 +102,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
+          #passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker-compose -f ${{ env.COMPOSE_FILE }} down
             sudo docker system prune -f
