--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -117,7 +117,7 @@ jobs:
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             
-            sudo docker-compose -f ${{ env.COMPOSE_FILE }} pull food_backend
+            sudo docker-compose -f ${{ env.COMPOSE_FILE }} pull foodgram_back
             sudo docker-compose -f ${{ env.COMPOSE_FILE }} up -d
             sudo docker cp foodgram_data/. food_backend:/app/static/
             sudo docker exec food_backend python manage.py makemigrations
