--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   food_backend:
     container_name: food_backend
     image: foodgram_backend:latest
-    restart: always
+    # restart: always
     volumes:
       - static_data:/app/static/
       - media_data:/app/media/
@@ -23,6 +23,7 @@ services:
 
   food_frontend:
     container_name: food_frontend
+    image: foodgram_frontend:latest
     build:
       context: ../frontend
       dockerfile: Dockerfile
