--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -42,13 +42,21 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }} 
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push to Docker Hub
+      - name: Push backend
         uses: docker/build-push-action@v2
         with:
           push: true
           no-cache: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_back:latest
-          file: backend/Dockerfile    
+          file: backend/Dockerfile
+
+      - name: Push frontend
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          no-cache: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_front:latest
+          file: frontend/Dockerfile 
 
   move_data:
     runs-on: ubuntu-latest
@@ -118,7 +126,7 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             
             sudo docker-compose -f ${{ env.COMPOSE_FILE }} pull foodgram_back
-            sudo docker-compose -f ${{ env.COMPOSE_FILE }} up -d --build foodgram_back
+            sudo docker-compose -f ${{ env.COMPOSE_FILE }} up -d
             sudo docker cp foodgram_data/. food_backend:/app/static/
             sudo docker exec food_backend python manage.py makemigrations
             sudo docker exec food_backend python manage.py migrate --verbosity 2
