--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -24,9 +24,9 @@ services:
   food_frontend:
     container_name: food_frontend
     image: foodgram_frontend:latest
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    # build:
+    #   context: ../frontend
+    #   dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
 
