--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -113,7 +113,7 @@ jobs:
           #passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker-compose -f ${{ env.COMPOSE_FILE }} down
-            sudo docker system prune -f
+            sudo docker system prune -аf
             sudo docker volume rm $(sudo docker volume ls -qf dangling=true) 2>/dev/null
 
             :> .env
@@ -125,7 +125,6 @@ jobs:
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             
-            sudo docker-compose -f ${{ env.COMPOSE_FILE }} pull foodgram_back
             sudo docker-compose -f ${{ env.COMPOSE_FILE }} up -d
             sudo docker cp foodgram_data/. food_backend:/app/static/
             sudo docker exec food_backend python manage.py makemigrations
