--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -46,7 +46,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          #no-cache: true
+          no-cache: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:v1.0
           file: backend/Dockerfile
 
@@ -54,7 +54,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          #no-cache: true
+          no-cache: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:v1.0
           file: frontend/Dockerfile 
 
