--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   foodgram_backend:
     container_name: food_backend
-    image: gavingr/foodgram_backend:v1.0
+    image: ${DOCKER_USERNAME}/foodgram_backend:v1.0
     restart: always
     volumes:
       - static_data:/app/static/
@@ -23,7 +23,7 @@ services:
 
   foodgram_frontend:
     container_name: foodgram_frontend
-    image: gavingr/foodgram_frontend:v1.0
+    image: ${DOCKER_USERNAME}/foodgram_frontend:v1.0
     # build:
     #   context: ../frontend
     #   dockerfile: Dockerfile
