--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     #   context: ../frontend
     #   dockerfile: Dockerfile
     volumes:
-      - ../frontend/:/app/result_build/
+      - frontend/:/app/result_build/
 
   foodgram_nginx:
     container_name: foodgram_nginx
@@ -41,9 +41,9 @@ services:
     volumes:
       - static_data:/app/static/
       - media_data:/app/media/
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - frontend:/usr/share/nginx/html/
+      - foodgram_docs:/usr/share/nginx/html/api/docs/
+      - ./foodgram.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - foodgram_frontend
       - foodgram_backend
@@ -53,5 +53,7 @@ volumes:
     name: static_data
   media_data:
     name: media_data
+  frontend:
+    name: frontend
   db_volume:
     name: db_volume
