--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -127,10 +127,10 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           #passphrase: ${{ secrets.PASSPHRASE }}
+          #sudo docker volume rm $(sudo docker volume ls -qf dangling=true) 2>/dev/null
           script: |
             sudo docker-compose -f ${{ env.COMPOSE_FILE }} down
-            sudo docker volume rm $(sudo docker volume ls -qf dangling=true) 2>/dev/null
-            sudo docker system prune -f
+            sudo docker system prune -af
 
             :> .env
             echo DOCKER_USERNAME=${{secrets.DOCKER_USERNAME}} >> .env
@@ -142,7 +142,6 @@ jobs:
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             
-            sudo docker-compose -f ${{ env.COMPOSE_FILE }} pull foodgram_backend
             sudo docker-compose -f ${{ env.COMPOSE_FILE }} up -d
             sudo docker cp foodgram_data/. foodgram_backend:/app/static/
             sudo docker exec foodgram_backend python manage.py makemigrations
