--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -42,8 +42,8 @@ services:
       - static_data:/app/static/
       - media_data:/app/media/
       - frontend:/usr/share/nginx/html/
+      - ./nginx/foodgram.conf:/etc/nginx/conf.d/default.conf
       - ./foodgram_docs:/usr/share/nginx/html/api/docs/
-      - ./foodgram.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - foodgram_frontend
       - foodgram_backend
