--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -151,7 +151,7 @@ jobs:
             sudo docker exec foodgram_backend python manage.py loadcsv tags Tag
             sudo docker exec foodgram_backend python manage.py loadcsv ingredients Ingredient
             sudo docker exec foodgram_backend python manage.py make_relations
-            sudo docker exec foodgram_backend python manage.py createsuperuser --no-input --username ${{ secrets.SU_NAME }} --email ${{ secrets.SU_EMAIL }}
+            sudo docker exec foodgram_backend python manage.py createsuperuser --username ${{ secrets.SU_NAME }} --email ${{ secrets.SU_EMAIL }} --no-input
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
