--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -149,7 +149,7 @@ jobs:
             sudo docker exec foodgram_backend python manage.py loadcsv tags Tag
             sudo docker exec foodgram_backend python manage.py loadcsv ingredients Ingredient
             sudo docker exec foodgram_backend python manage.py make_relations
-            sudo docker exec foodgram_backend python manage.py createsuperuser --username ${{ secrets.SU_NAME }} --first_name "admin" --last_name "admin" --email ${{ secrets.SU_EMAIL }} --noinput
+            sudo docker exec foodgram_backend python manage.py createsuperuser --username ${{ secrets.SU_NAME }} --email ${{ secrets.SU_EMAIL }} --no-input
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
