--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -45,16 +45,16 @@ jobs:
       - name: Push backend
         uses: docker/build-push-action@v2
         with:
-          ush: true
-          no-cache: true
+          #push: true
+          #no-cache: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:v1.0
           file: backend/Dockerfile
 
       - name: Push frontend
         uses: docker/build-push-action@v2
         with:
-          push: true
-          no-cache: true
+          #push: true
+          #no-cache: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:v1.0
           file: frontend/Dockerfile 
 
@@ -113,6 +113,7 @@ jobs:
       COMPOSE_FILE: /home/${{ secrets.USER }}/foodgram_compose.yaml
       DJANGO_SUPERUSER_PASSWORD: ${{ secrets.SU_PASSWORD }}
     needs: build_and_push_to_docker_hub
+    #sudo docker exec foodgram_backend python manage.py createsuperuser --username ${{ secrets.SU_NAME }} --email ${{ secrets.SU_EMAIL }} --no-input
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Login to Docker 
@@ -149,7 +150,7 @@ jobs:
             sudo docker exec foodgram_backend python manage.py loadcsv tags Tag
             sudo docker exec foodgram_backend python manage.py loadcsv ingredients Ingredient
             sudo docker exec foodgram_backend python manage.py make_relations
-            sudo docker exec foodgram_backend python manage.py createsuperuser --username ${{ secrets.SU_NAME }} --email ${{ secrets.SU_EMAIL }} --no-input
+        
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
