--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -45,16 +45,16 @@ jobs:
       - name: Push backend
         uses: docker/build-push-action@v2
         with:
-          #push: true
-          #no-cache: true
+          push: true
+          no-cache: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:v1.0
           file: backend/Dockerfile
 
       - name: Push frontend
         uses: docker/build-push-action@v2
         with:
-          #push: true
-          #no-cache: true
+          push: true
+          no-cache: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:v1.0
           file: frontend/Dockerfile 
 
