--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -7,7 +7,7 @@ server {
         try_files $uri $uri/redoc.html;
     }
     location /api/ {
-        proxy_pass http://food_backend:5000;
+        proxy_pass http://foodgram_backend:5000;
     }
     location / {
         root /usr/share/nginx/html;
