--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,18 +1,33 @@
 server {
     listen 80;
+    server_tokens off;
     server_name ${NGINX_HOST};
 
-    location /api/docs/ {
+    location /api/docs {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    location /api/ {
-        proxy_pass http://foodgram_backend:5000;
+    location /api {
+      proxy_pass http://${NGINX_HOST}:5000;
+      proxy_set_header    Host $host;
+      proxy_set_header    X-Real-IP $remote_addr;
+      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Proto $scheme;
+    }
+    location /admin/ {
+      proxy_pass http://${NGINX_HOST}:5000/admin/;
+      proxy_set_header    Host $host;
+      proxy_set_header    X-Real-IP $remote_addr;
+      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Proto $scheme;
+    }
+    location /static/ {
+        root /app/
     }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
-        #try_files $uri /index.html;
+        try_files $uri /index.html;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
