--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,28 +1,15 @@
 server {
     listen 80;
     server_name ${NGINX_HOST};
-
+    server_tokens off;
+  
     location /api/docs {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
     location /api {
-      proxy_pass http://foodgram_backend:5000;
-      proxy_set_header    Host $host;
-      proxy_set_header    X-Real-IP $remote_addr;
-      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header    X-Forwarded-Proto $scheme;
-    }
-    location /admin/ {
-      proxy_pass http://foodgram_backend:5000/admin/;
-      proxy_set_header    Host $host;
-      proxy_set_header    X-Real-IP $remote_addr;
-      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header    X-Forwarded-Proto $scheme;
-    }
-    location /static/ {
-        root /app/
-    }
+        proxy_pass http://foodgram_backend:8000;
+    } 
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
