--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -9,7 +9,19 @@ server {
     }
     location /api {
         proxy_pass http://foodgram_backend:8000;
-    } 
+    }
+    location /admin/ {
+        proxy_pass http://foodgram_backend:8000/admin/;
+    }
+    location /media/ {
+        root /var/html;
+    }
+    location /static/admin/ {
+        root /var/html;
+    }
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
