--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,9 +8,11 @@ server {
         try_files $uri $uri/redoc.html;
     }
     location /api {
+        root /usr/share/nginx/html;
         proxy_pass http://foodgram_backend:8000;
     }
     location /admin/ {
+        root /usr/share/nginx/html;
         proxy_pass http://foodgram_backend:8000/admin/;
     }
     location /media/ {
