--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,17 +1,20 @@
-server {
+erver {
     listen 80;
     server_name ${NGINX_HOST};
     server_tokens off;
-  
-    location /api/docs {
+
+    location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
     location /api {
-        root /usr/share/nginx/html;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://foodgram_backend:8000;
     }
     location /admin/ {
-        root /usr/share/nginx/html;
+        proxy_pass http://foodgram_backend:8000/admin/;
     }
     location /media/ {
         root /var/html;
@@ -22,10 +25,16 @@ server {
     location /static/rest_framework/ {
         root /var/html/;
     }
+    location /static/admin/ {
+        root /var/html/;
+    }
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
     location / {
         root /usr/share/nginx/html;
+        index  index.html index.htm;
         try_files $uri /index.html;
-        proxy_pass http://foodgram_backend:8000;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
