--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,22 +8,16 @@ server {
         try_files $uri $uri/redoc.html;
     }
     location /api {
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://foodgram_backend:8000;
+        proxy_pass http://foodgram_backend:8000/;
     }
     location /admin/ {
         proxy_pass http://foodgram_backend:8000/admin/;
     }
     location /media/ {
-        root /var/html;
+        root /app/media/;
     }
-    location /static/admin/ {
-        root /var/html;
-    }
-    location /static/rest_framework/ {
-        root /var/html/;
+    location /static/ {
+	    root /app/static/;
     }
     location / {
         root /usr/share/nginx/html;
