--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -39,8 +39,8 @@ services:
     #  - "host.docker.internal:host-gateway"
     # network_mode: host
     volumes:
-      - static_data:/app/static/
-      - media_data:/app/media/
+      - static_data:/var/html/static/
+      - media_data:/var/html/media/
       - frontend:/usr/share/nginx/html/
       - ./nginx/foodgram.conf:/etc/nginx/conf.d/default.conf
       - ./foodgram_docs:/usr/share/nginx/html/api/docs/
