--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -14,10 +14,10 @@ server {
         proxy_pass http://foodgram_backend:8000/admin/;
     }
     location /media/ {
-        root /app/media/;
+        root /var/html/;
     }
     location /static/ {
-	    root /app/static/;
+	    root /var/html/;
     }
     location / {
         root /usr/share/nginx/html;
