--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -20,7 +20,7 @@ server {
 	    root /var/html/;
     }
     location / {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/build;
         index  index.html index.htm;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
