--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -17,7 +17,7 @@ server {
         root /var/html/;
     }
     location /static/ {
-	    root /var/html/;
+	    root /usr/share/nginx/html/build;
     }
     location / {
         root /usr/share/nginx/html/build;
