--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,7 +8,7 @@ server {
         try_files $uri $uri/redoc.html;
     }
     location /api {
-        proxy_pass http://foodgram_backend:8000/;
+        proxy_pass http://foodgram_backend:8000/api/;
     }
     location /admin/ {
         proxy_pass http://foodgram_backend:8000/admin/;
