--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -7,7 +7,7 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    location /api {
+    location /api/ {
         proxy_pass http://foodgram_backend:8000/api/;
     }
     location /admin/ {
