--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,9 +8,15 @@ server {
         try_files $uri $uri/redoc.html;
     }
     location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://foodgram_backend:8000/api/;
     }
     location /admin/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://foodgram_backend:8000/admin/;
     }
     location /media/ {
