--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -22,6 +22,9 @@ server {
     location /media/ {
         root /var/html/;
     }
+    location /static/admin/ {
+	    root /var/html/;
+    }
     location /static/ {
 	    root /usr/share/nginx/html/build;
     }
