--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -25,6 +25,9 @@ server {
     location /static/admin/ {
 	    root /var/html/;
     }
+    location /static/admin/ {
+	    root /var/html/;
+    }
     location /static/ {
 	    root /usr/share/nginx/html/build;
     }
