--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -22,7 +22,7 @@ server {
     location /media/ {
         root /var/html/;
     }
-    location /static/admin/ {
+    location /static/rest_framework/ {
 	    root /var/html/;
     }
     location /static/admin/ {
