--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -124,6 +124,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             sudo docker-compose -f ${{ env.COMPOSE_FILE }} down
+            sudo docker volume rm $(sudo docker volume ls -qf dangling=true) 2>/dev/null
             sudo docker system prune -af
 
             :> .env
