--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -124,7 +124,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             sudo docker-compose -f ${{ env.COMPOSE_FILE }} down
-            sudo docker volume rm $(sudo docker volume ls -qf dangling=true) 2>/dev/null
             sudo docker system prune -af
 
             :> .env
@@ -142,6 +141,7 @@ jobs:
             sudo docker exec foodgram_backend python manage.py makemigrations
             sudo docker exec foodgram_backend python manage.py migrate --verbosity 2
             sudo docker exec foodgram_backend python manage.py collectstatic --no-input
+            sudo docker exec foodgram_backend python manage.py flush --no-input
             sudo docker exec foodgram_backend python manage.py loadcsv users FoodgramUser
             sudo docker exec foodgram_backend python manage.py loadcsv tags Tag
             sudo docker exec foodgram_backend python manage.py loadcsv ingredients Ingredient
